# best-practice

./: AGENTS.md  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: nix-check.yml  pages.yml  rust-cf-leptos.yml  rust-example.yml
nix/: concat-project.sh  concat-rust-example.sh  render-readme.sh
rust-cf-leptos/: .gitignore  Cargo.toml  README.md  flake.nix  wrangler.toml
rust-cf-leptos/crates/app/: Cargo.toml
rust-cf-leptos/crates/app/src/: lib.rs
rust-cf-leptos/crates/client/: Cargo.toml
rust-cf-leptos/crates/client/src/: lib.rs
rust-cf-leptos/crates/worker/: Cargo.toml
rust-cf-leptos/crates/worker/src/: lib.rs
rust-cf-leptos/e2e-tests/: Cargo.toml
rust-cf-leptos/e2e-tests/src/: main.rs
rust-cf-leptos/nix/: run-e2e-tests.sh
rust-example/: Cargo.toml  README.md  flake.nix
rust-example/src/: main.rs
