[workspace]
resolver = "2"
members = ["crates/app", "crates/client", "crates/worker", "e2e-tests"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.metadata.crane]
name = "rust-cf-leptos"

[workspace.dependencies]
axum = { version = "0.8.7", default-features = false, features = [
  "http1",
  "macros",
] }
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8.13", default-features = false }
leptos_axum = { version = "0.8.7", default-features = false, features = [
  "wasm",
] }
leptos_config = { version = "0.8.8" }
leptos_meta = { version = "0.8.5", default-features = false }
leptos_router = { version = "0.8.10", default-features = false }
log = "0.4"
tower-service = "0.3"
wasm-bindgen = "0.2"
worker = "0.6.7"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
