[package]
name = "app"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_config = { workspace = true }
leptos_meta = { workspace = true }
server_fn = { workspace = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "server_fn/ssr"]
